--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
     display: flex;
     align-items: center;
     justify-content: space-evenly;
-    padding: 24px 0;
+    padding: 24px 0 0 0;
 }
 .logo{
     cursor: pointer;
@@ -108,6 +108,36 @@
     color: white;
 }
 .nav2{
+    width: 50%;
+    margin-left: 10%;
+    margin-top: 16px;
     display: flex;
     align-items: center;
+    justify-content: space-evenly ;
+}
+.nav2 a{
+    color: white;
+    font-size: 14;
+    text-decoration: none;
+    outline: none;
+}
+.nav2 p{
+    color: white;
+    font-size: 14;
+    cursor: default;
+}
+.fundo h1{
+    font-size: 48px;
+    color: white;
+    padding: 8% 15%;
+    font-weight: bold;
+}
+.nav3 h1{
+    font-weight: bold;
+    padding: 56px 38% ;
+}
+.container{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
